<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_firstname"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/mobile"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_mobile"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/password"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/email"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/zipCode"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_zipCode"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <CheckBox
                        android:id="@+id/areYouVendor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_areYouVendor"
                        android:textColor="@color/colorTxt"
                        android:textSize="@dimen/h3" />

                    <EditText
                        android:id="@+id/vendor_title"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_vendor_title"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/vendor_registration_no"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_vendor_regs_no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/vendor_description"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_vendor_description"
                        android:inputType="text|textMultiLine" />

                    <Spinner
                        android:id="@+id/vendor_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />

                    <Spinner
                        android:id="@+id/subtype_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />

                    <EditText
                        android:id="@+id/otp"
                        style="@style/editView_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_otp"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="@style/button_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/action_sign_in" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
